# Modelador_Fronteira

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
Definitions/: half_edge.h
Renderizador/: mesh.h
libs/Glad/: CMakeLists.txt
libs/Glm/gli/: CMakeLists.txt
libs/ImGui/: CMakeLists.txt
shaders/: mFragShader.glsl  mVtxShader.glsl
